--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "env": {
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "http://api.unitysupermarket.com/public/",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.unitysupermarket.com/public/",
     "NEXT_PUBLIC_SHOP_URL": "http://unitysupermarket.com/",
     "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": ""
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "http://api.unitysupermarket.com/public/",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://api.unitysupermarket.com/public/",
       "NEXT_PUBLIC_SHOP_URL": "",
       "NEXT_PUBLIC_GOOGLE_MAP_API_KEY": "http://unitysupermarket.com/"
     }
